--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta name="google-site-verification" content="PZZF5bLX4DIKW3alA0S4gSlB0XsXABk9nITqy8E9YDQ" />
     <title>my test page</title>
   </head>
   <body>
